feat: add plaid stock item
